# api_tests_for_shop

./: pyproject.toml
helpers/: attach.py
pages/: cart_page.py
tests/: conftest.py  test_add_good_to_cart.py
